--- a/app/sequence-diagram.generate-code.config.app.json
+++ b/app/sequence-diagram.generate-code.config.app.json
@@ -1,7 +1,7 @@
 {
   "collection": "@nestjs/schematics",
   "sourceRoot": "app",
-  "entryFile": "sequence-diagram.app",
+  "entryFile": "sequence-diagram.generate-code.app",
   "compilerOptions": {
     "watchAssets": true
   }
